classification model using RandomForestClassifier

--- a/airbnb_cluster.ipynb
+++ b/airbnb_cluster.ipynb
@@ -412,7 +412,7 @@
    "id": "6c831644",
    "metadata": {},
    "source": [
-    "On average, the current model's predictions are off by $38.52 from the actual Airbnb price. Typical prediction error is about $57.94 which means the model (RandomForestRegressor) occasionally makes bigger mistakes, even if average performance is okay."
+    "On average, the current model's predictions are off by $38.52 from the actual Airbnb price. Typical prediction error is about $57.94 which means the model (RandomForestRegressor) occasionally maskes bigger mistakes, even if average performance is okay."
    ]
   }
  ],
